--- a/src/app.module.css
+++ b/src/app.module.css
@@ -35,7 +35,7 @@
 .container {
   background: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(15px);
-  padding: 50px;
+
   border-radius: 25px;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2),
     inset 0 1px 0 rgba(255, 255, 255, 0.3);
@@ -43,4 +43,11 @@
   max-width: 700px;
   width: 100%;
   border: 3px solid rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    padding: 20px;
+    border-radius: 0px;
+  }
 }
