--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -21,6 +21,7 @@
   letter-spacing: 2px;
 }
 
+
 .stars {
   display: flex;
   justify-content: center;
@@ -69,4 +70,19 @@
   border-bottom: 3px solid #c73e1d;
   display: inline-block;
   padding-bottom: 5px;
+}
+
+
+@media screen and (max-width: 500px) {
+  .logo {
+    font-size: 1.8rem;
+  }
+
+  .flag {
+    font-size: 1.7rem;
+  }
+
+  .subtitle {
+    margin-bottom: 5px;
+  }
 }
